# IoTrace

./: .env  .gitignore  README.md  acl.conf  docker-compose.yaml  gen_certs.sh  generate_dev_certs.sh  mongo_healthcheck.sh  openssl-ca.cnf  run.sh
aggregator/: Dockerfile  index.js  package-lock.json  package.json
aggregator/auth/: passport-auth.js
aggregator/db/: device.js  index.js  nonce.js  sbom.js  user.js  vulnCache.js
aggregator/handlers/: DeviceHandler.js  EmqxHandler.js  SbomHandler.js  UserHandler.js  VulnerabilityHandler.js
aggregator/routes/: auth.js  device.js  healthcheck.js  index.js  sbom.js
aggregator/users/: AnonymousUser.js
deamon/: Dockerfile  pyproject.toml  requirements.txt  run.sh
deamon/tracelet/: main.py
deamon/tracelet/crypto/: signer.py
deamon/tracelet/modes/: periodic.py  test.py  triggered.py
deamon/tracelet/mqtt/: client.py
deamon/tracelet/sbom/: generator.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/app/: layout.tsx  requests.ts  routes.ts
frontend/app/components/: device-card.tsx  login-form.tsx
frontend/app/components/ui/: pagination.tsx
frontend/app/routes/: dashboard.tsx  device.$did.sbom.$sbomId.ts  device.tsx  login.tsx  logout.tsx
frontend/app/server/: authServerHelpers.ts
mongo-init/: create-user.js
